// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`csf-story-kind no-title.js 1`] = `
Object {
  "components": Object {},
  "kinds": Object {
    "Story": Object {
      "components": Object {},
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/csf/kind/no-title.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
        "name": "@component-controls/instrument",
      },
      "test": 1,
      "title": "Story",
    },
  },
  "stories": Object {},
  "transformed": "export default {
  title: 'Story',
  test: 1,
};
",
}
`;

exports[`csf-story-kind title-and-parameters.js 1`] = `
Object {
  "components": Object {
    "21455c8d3b1413b6aaaa56c7ca6e1dde": Object {
      "name": "ControlsTable",
    },
  },
  "kinds": Object {
    "Storybook/Blocks/ControlsTable": Object {
      "component": "ControlsTable",
      "components": Object {
        "ControlsTable": "21455c8d3b1413b6aaaa56c7ca6e1dde",
      },
      "parameters": Object {
        "addonControls": Object {
          "smart": false,
        },
        "component": "ControlsTable",
      },
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/csf/kind/title-and-parameters.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
        "name": "@component-controls/instrument",
      },
      "title": "Storybook/Blocks/ControlsTable",
    },
  },
  "stories": Object {},
  "transformed": "export default {
  title: 'Storybook/Blocks/ControlsTable',
  parameters: {
    component: ControlsTable,
    addonControls: {
      smart: false,
    },
  },
};
",
}
`;

exports[`csf-story-kind title-controls-and-parameters.js 1`] = `
Object {
  "components": Object {
    "dec877e66c549940695c423429a5d00b": Object {
      "name": "ControlsTable",
    },
  },
  "kinds": Object {
    "Storybook/Kind": Object {
      "component": "ControlsTable",
      "components": Object {
        "ControlsTable": "dec877e66c549940695c423429a5d00b",
      },
      "parameters": Object {
        "controls": Object {
          "name": Object {
            "label": "Name",
            "order": 9999,
            "type": "ControlTypes.TEXT",
            "value": "Mark",
          },
        },
      },
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/csf/kind/title-controls-and-parameters.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
        "name": "@component-controls/instrument",
      },
      "title": "Storybook/Kind",
    },
  },
  "stories": Object {},
  "transformed": "export default {
  title: 'Storybook/Kind',
  component: ControlsTable,
  parameters: {
    controls: {
      name: {
        type: ControlTypes.TEXT,
        label: 'Name',
        value: 'Mark',
        order: 9999,
      },
    },
  },
};
",
}
`;

exports[`csf-story-kind with-title.js 1`] = `
Object {
  "components": Object {},
  "kinds": Object {
    "Storybook/Blocks/ControlsTable": Object {
      "components": Object {},
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/csf/kind/with-title.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
        "name": "@component-controls/instrument",
      },
      "title": "Storybook/Blocks/ControlsTable",
    },
  },
  "stories": Object {},
  "transformed": "export default {
  title: 'Storybook/Blocks/ControlsTable',
};
",
}
`;
